Objective-C GData Framework Release Notes

Project site:     http://code.google.com/p/gdata-objectivec-client/
Discussion group: http://groups.google.com/group/gdata-objectivec-client-framework

Changes since 1.4.0

Additions

- Added Google Health classes

- Added YouTube user event activity classes

Changes

- Calendar now defaults to service version 2.1, which slightly changes
  responses and response codes from 2.0.
  http://code.google.com/apis/calendar/changelog.html

- Release builds on iPhone now compile out the elaborate descriptions
  for each GDataObject.  Developers can set GDATA_SIMPLE_DESCRIPTIONS
  in their projects to control this behavior.

- Release builds on iPhone now compile out the http logging code.
  Developers can set STRIP_GDATA_FETCH_LOGGING in their projects to control
  this behavior.

- Various internal refactoring for improved code readability and
  maintainability.

- For performance, unknown elements and attributes are now removed from
  GDataObjects by comparing only object pointers, not the underlying XML.

- To improve parsing performance, GDataObject extension declarations are cached
  rather than duplicated in each object.

- To reduce memory usage, GDataObject extensions are stored in arrays only
  when there is more than one instance of an extension class.

- GDataOrganization setters now filter out empty string org names and titles.

- Contacts sample updated to optionally fetch only the MyContacts group.

Bugs Fixed

- Fixed leak in -keepChildXMLElementsForElement (thanks alexkac)

- GDataXMLNode now consistently returns cached copies of child elements
  and attributes rather than duplicate copies.
  
- Fixed possibiilty of If-modified-since header being added to http deletes


Release 1.6.0
30-January-2009
Changes since 1.5.0

Additions

- Added -setShouldServiceFeedsIgnoreUnknowns to service classes, allowing
  for faster feed parsing on iPhone by ignoring unexpected XML, but requiring